Fix Beanstalkd package install task
Fixes https://github.com/jasonj/ansible-beanstalkd/issues/1

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
   - name: Install Beanstalkd Package
-    action: apt pkg=$item state=latest
+    action: apt pkg={{ item }} state=latest
     with_items:
       - beanstalkd
     sudo: yes
