--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,10 +7,16 @@
     sudo: yes
 
   - name: edit /etc/default/beanstalkd DAEMON_OPTS, set listener info and persistent storage options
-    lineinfile: >
-      dest=/etc/default/beanstalkd 
-      regexp='^#?DAEMON_OPTS' 
-      line='DAEMON_OPTS="-l {{ beanstalkdListenAddress }} -p {{ beanstalkdListenPort }} -b {{ beanstalkdPersistentStorageLocation }}"' 
+    lineinfile:
+      dest: /etc/default/beanstalkd
+      regexp: "{{ item.regexp }}"
+      line: "{{ item.line }}"
+    with_items:
+      - { regexp: "^#?DAEMON_OPTS", line: "#DAEMON_OPTS - not supported as a direct override by /etc/init.d/beanstalkd" }
+      - { regexp: "^#?BEANSTALKD_LISTEN_ADDR", line: "BEANSTALKD_LISTEN_ADDR='{{ beanstalkdListenAddress }}'" }
+      - { regexp: "^#?BEANSTALKD_LISTEN_PORT", line: "BEANSTALKD_LISTEN_PORT='{{ beanstalkdListenPort }}'" }
+      - { regexp: "^#?BEANSTALKD_EXTRA", line: "BEANSTALKD_EXTRA='-b {{ beanstalkdPersistentStorageLocation }}'" }
+
     notify: restart beanstalkd
     sudo: yes
 
